--- a/login.html
+++ b/login.html
@@ -236,7 +236,7 @@ body {
                     <br>
                     <p class="card-text">The appearance is engraved with delicate ballet elements in relief, painted with beautiful swans. Wherever you are, you can check your look with this super exquisite hand mirror.</p>
                     <br><br><br><br>
-                    <a href="#" class="btn btn-primary">add to bag</a>
+                    <a href="checkout.html" class="btn btn-primary">add to bag</a>
                     <br><br>
                 </div>
             </div>
@@ -255,7 +255,7 @@ body {
         
 </p>
             <br>
-            <a href="#" class="btn btn-primary">add to bag</a>
+            <a href="checkout.html" class="btn btn-primary">add to bag</a>
             <br><br>
 </div>
 </div>
@@ -274,7 +274,7 @@ body {
     <br>
     <p class="card-text">The blush depicts a fairy tale in embossed, artisanal clarity that restores design details and has a lightweight, creamy powder texture that has been newly upgraded.</p>
     <br><br><br><br>
-    <a href="#" class="btn btn-primary">add to bag</a>
+    <a href="checkout.html " class="btn btn-primary">add to bag</a>
     <br><br>
 </div>
 </div>
