--- a/index.html
+++ b/index.html
@@ -81,5 +81,88 @@
             </div>
         </div>
     </div>
+    
+<script>
+
+
+function saveCredentials(event) {
+    event.preventDefault(); // Prevent form from submitting
+    const userData = {
+        1: {
+            "email": "clariz@domain.com",
+            "name": "CLA",
+            "password": "password"
+        },
+        2: {
+            "email": "vegeta@domain.com",
+            "name": "Vegeta",
+            "password": "password"
+        },
+        3: {
+            "email": "onizuka@domain.com",
+            "name": "Onizuka",
+            "password": "password"
+        }
+    };
+
+    // Get email and password values
+    const email = document.getElementById('email').value;
+    const password = document.getElementById('password').value;
+
+    // Check if email and password exist in userData
+    let userExists = false;
+    let userName = '';
+    for (let key in userData) {
+        if (userData[key].email === email && userData[key].password === password) {
+            userExists = true;
+            userName = userData[key].name;
+            break;
+        }
+    }
+
+    if (userExists) {
+        alert('User authenticated!');
+        // Save email and password in local storage
+        localStorage.setItem('email', email);
+        localStorage.setItem('password', password);
+        localStorage.setItem('name', userName);
+
+        window.location.href = "login.html";
+    } else {
+        alert('Invalid email or password!');
+        window.location.reload();
+    }
+}
+
+function showLogin() {
+    let login = document.getElementById('login');
+    login.style.display ="block";
+    document.body.style.overflow = "hidden";
+}
+function closeLogin() {
+    let login = document.getElementById('login');
+    login.style.display ="none";
+    document.body.style.overflow = "unset";
+}
+
+function checkUsernameOnLoad() {
+    const storedEmail = localStorage.getItem('email');
+    if (storedEmail) {
+        return storedEmail;
+    } else {
+        return null;
+    }
+}
+
+function logout() {
+    localStorage.clear();
+    window.location.href = "index.html";
+    // if (confirm("Are you sure you want to logout?")) {
+    //     localStorage.clear();
+    //     window.location.href = "index.html";
+    // }    
+}
+</script>
+
 </body>
 </html>
