--- a/checkout.html
+++ b/checkout.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="external_registration (1).css">
-    <script src="script.js" defer></script>
     <title> add to cart </title>
 </head>
 
@@ -99,5 +98,6 @@
         <button type="submit">Check Out</button>
       </form>
     </section>
+    <script src="script.js"></script>
   </body>
 </html>
