--- a/login.html
+++ b/login.html
@@ -333,7 +333,7 @@ body {
 </script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js">
 </script>
-<script src="script.js">
+<script src="script.js"></script>
 </script>
 
 </body>
